--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>demo</name>
+	<name>spring-boot-demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
